--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">BE MY QUEEN</span>
                     <span class="songlistplay"><span class="timestamp">03:23 <i id="0" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
             </div>
