--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="songItem">
                     <img alt="1">
                     <span class="songName">Let me Love You</span>
-                    <span class="songlistplay"><span class="timestamp">02:48 <i id="0" class="far songItemPlay fa-play-circle"></i> </span></span>
+                    <span class="songlistplay"><span class="timestamp">03:23 <i id="0" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
@@ -72,9 +72,10 @@
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">BE MY QUEEN</span>
-                    <span class="songlistplay"><span class="timestamp">03:23 <i id="0" class="far songItemPlay fa-play-circle"></i> </span></span>
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">02:48 <i id="1" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
+                
             </div>
         </div>
         <div class="songBanner"></div>
